--- a/index.html
+++ b/index.html
@@ -2079,7 +2079,7 @@
  
       <!-- Qaybta Home Feed - UPDATED -->
 <section id="homeSection" class="active">
-   h3>Home Feed</h3>
+   <h3>Home Feed</h3>
 <div id="postSection">
     <textarea id="postText" placeholder="What's on your mind?"></textarea>
 
